# HelixEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
CMake/: PackageDependency.cmake  fetch.cmake
CMake/Tool/: CopyDependencies.cmake.in
HelixEngine/Essence/: CMakeLists.txt
HelixEngine/Essence/Vulkan/include/Essence/Vulkan/: Device.hpp  Queue.hpp
HelixEngine/Essence/Vulkan/include/Essence/Vulkan/Component/: DebugUtil.hpp  Loader.hpp  SwapChain.hpp  Wsi.hpp
HelixEngine/Essence/Vulkan/src/: Device.cpp  Queue.cpp
HelixEngine/Essence/Vulkan/src/Component/: DebugUtil.cpp  SwapChain.cpp  Wsi.cpp
HelixEngine/Essence/include/Essence/: Device.hpp  Enum.hpp  Essence.hpp  Queue.hpp
HelixEngine/Essence/include/Essence/Component/: Component.hpp  DebugUtil.hpp  SwapChain.hpp  Wsi.hpp
HelixEngine/Essence/src/: Device.cpp
HelixEngine/Essence/src/Component/: Component.cpp  DebugUtil.cpp  Wsi.cpp
HelixEngine/include/: HelixEngine.ixx
HelixEngine/include/HelixEngine/: Enum.hpp  HelixEngine.hpp
HelixEngine/include/HelixEngine/Base/: Object.hpp  Ref.hpp  Singleton.hpp
HelixEngine/include/HelixEngine/Core/: Game.hpp  Window.hpp
HelixEngine/include/HelixEngine/Core/QtWindow/: Widget.hpp
HelixEngine/include/HelixEngine/Math/: Matrix.hpp  Shape.hpp  Transform.hpp  Vector.hpp  Vector2.hpp
HelixEngine/include/HelixEngine/Node/: Collection.hpp  Node.hpp  RectNode.hpp  Scene.hpp
HelixEngine/include/HelixEngine/Render/: CommandQueue.hpp  Context.hpp  Device.hpp  RenderQueue.hpp  Renderer.hpp  Resource.hpp  Shader.hpp  SwapChain.hpp  Swizzle.hpp  SyncCommand.hpp
HelixEngine/include/HelixEngine/Render/Command/: BeginCommand.hpp  CreateVertexBufferCommand.hpp  GeneralCommand.hpp  RenderCommand.hpp  SetRenderPipeline.hpp
HelixEngine/include/HelixEngine/Render/GraphicsDevice/: GraphicsDevice.hpp  VulkanDevice.hpp
HelixEngine/include/HelixEngine/Render/OpenGL/: ExclusiveCommand.hpp  Renderer.hpp  Resource.hpp
HelixEngine/include/HelixEngine/Render/QRhi/: RenderInstance.hpp
HelixEngine/include/HelixEngine/Render/Vulkan/: DebugUtil.hpp  RenderInstance.hpp  SwapChain.hpp
HelixEngine/include/HelixEngine/Util/: BitOption.hpp  Color.hpp  DelayInit.hpp  Feature.hpp  IntrusiveList.hpp  Logger.hpp  MemoryBlock.hpp  Object.hpp  PixelFormat.hpp  Ref.hpp  Singleton.hpp  TemplateString.hpp  Time.hpp
HelixEngine/src/Base/: Object.cpp
HelixEngine/src/Core/: Game.cpp  Window.cpp
HelixEngine/src/Core/QtWindow/: Widget.cpp
HelixEngine/src/Node/: Collection.cpp  Node.cpp  RectNode.cpp  Scene.cpp
HelixEngine/src/Render/: Context.cpp  Device.cpp  RenderQueue.cpp  Renderer.cpp  Resource.cpp  SwapChain.cpp
HelixEngine/src/Render/GraphicsDevice/: GraphicsDevice.cpp  VulkanDevice.cpp
HelixEngine/src/Render/OpenGL/: Renderer.cpp  Resource.cpp
HelixEngine/src/Render/QRhi/: RenderInstance.cpp
HelixEngine/src/Render/Vulkan/: DebugUtil.cpp  RenderInstance.cpp  SwapChain.cpp
HelixEngine/src/Util/: Duration.cpp  Logger.cpp  Object.cpp  PixelFormat.cpp
HelixEngine/src/Window/: Window.cpp
test/: main.cpp  sdl_test.cpp  test.cpp
